--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ humanize==0.5.1
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+parse==1.14.0
 pytz==2019.3
 six==1.13.0
 SQLAlchemy==1.3.11
+structlog==19.2.0
 tzlocal==2.0.0
 Werkzeug==0.16.0
