--- a/web.config
+++ b/web.config
@@ -5,7 +5,7 @@
        path="*"
        verb="*"
        modules="FastCgiModule"
-       scriptProcessor="c:\arcgis-license-tracker\venv\scripts\python.exe|c:\arcgis-license-tracker\venv\lib\site-packages\wfastcgi.py"
+       scriptProcessor="c:\inetpub\wwwroot\arcgis-license-tracker\venv\scripts\python.exe|c:\inetpub\wwwroot\arcgis-license-tracker\venv\lib\site-packages\wfastcgi.py"
        resourceType="Unspecified"
        requireAccess="Script" />
    </handlers>
