--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ APScheduler==3.6.3
 blinker==1.4
 Click==7.0
 Flask==1.1.1
+Flask-APScheduler==1.11.0
 Flask-DebugToolbar==0.10.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
@@ -12,6 +13,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 parse==1.14.0
+python-dateutil==2.8.1
 pytz==2019.3
 six==1.13.0
 SQLAlchemy==1.3.11
