--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,13 @@ Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.7.1
 humanize==0.5.1
 itsdangerous==1.1.0
-Jinja2==2.10.3
+Jinja2>=2.10.1
 MarkupSafe==1.1.1
 parse==1.14.0
 python-dateutil==2.8.1
 pytz==2019.3
 six==1.13.0
-SQLAlchemy==1.3.11
+SQLAlchemy>=1.3.0
 structlog==19.2.0
 tzlocal==2.0.0
 Werkzeug==0.16.0
